<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login">


    <ImageView
        android:id="@+id/backLogin"
        android:layout_width="103dp"
        android:layout_height="77dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/welcomeLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="50dp"
            android:text="@string/mainTitleLogin"
            android:textAlignment="center"
            android:textColor="@color/dark_pink"
            android:textSize="@dimen/welcomeTextSize"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mailLogin"
            android:layout_width="@dimen/generalTitleWidth"
            android:layout_height="@dimen/generalTitleHeight"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/mail"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/welcomeTextSize"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="260dp" />

        <EditText
            android:id="@+id/inputMailLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generalTitleHeight"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/mail"
            android:paddingLeft="5dp"
            android:textSize="@dimen/generalTitleSize"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="317dp" />

        <TextView
            android:id="@+id/passwordLogin"
            android:layout_width="@dimen/generalTitleWidth"
            android:layout_height="@dimen/generalTitleHeight"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/welcomeTextSize"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="374dp" />

        <EditText
            android:id="@+id/inputPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/generalTitleHeight"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:paddingLeft="5dp"
            android:textSize="@dimen/generalTitleSize"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="434dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/loginLogin"
        android:layout_width="157dp"
        android:layout_height="105dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />



</androidx.constraintlayout.widget.ConstraintLayout>